--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 		//Carregando as imagens e Musicas
 		carregarImagens();
 		// carregarMusicas();
-		//
-		// function carregarMusicas() {
-		// 	musicaAcao = new Audio();
-		// 	musicaAcao.src = 'snd/musica-acao.mp3';
-		// 	musicaAcao.load();
-		// 	musicaAcao.volume = 0.8;
-		// 	musicaAcao.loop = true;
-		// }
+
+		function carregarMusicas() {
+			musicaAcao = new Audio();
+			musicaAcao.src = 'snd/musica-acao.mp3';
+			musicaAcao.load();
+			musicaAcao.volume = 0.8;
+			musicaAcao.loop = true;
+		}
 
 		function carregarImagens() {
 			//O objeto contem todas as imagens a serem carregadas
@@ -166,7 +166,7 @@
 			if (animacao.ligado){
 				animacao.desligar();
 				// musicaAcao.pause();
-				// ativarTiro(false);
+				ativarTiro(false);
 				// ativarCheatVida(false);
 
 				//Escrever Pausado
@@ -181,7 +181,7 @@
 			else{
 				// criador.ultimoOvni = new Date().getTime();
 				animacao.ligar();
-				// ativarTiro(true);
+				ativarTiro(true);
 				// ativarCheatVida(true);
 				// musicaAcao.play();
 			}
@@ -260,7 +260,7 @@
 			animacao.ligar();
 
 			//Tiro da nave
-			// ativarTiro(true);
+			ativarTiro(true);
 
 			//Ativar Cheat
 			// ativarCheatVida(true);
