Adicionado funcionaliddade para recuperar a latitude e longitude da nave (em Km).

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				estrelas: 'fundo-estrelas.png',
 				nuvens: 'fundo-nuvens.png',
 				nave: 'nave-spritesheet.png',
-				// ovni: 'ovni.png',
+				ovni: 'ovni.png',
 				// explosao: 'explosao.png'
 			};
 
@@ -246,7 +246,7 @@
 			ovni.y = -imgOvni.height;
 
 			animacao.novoSprite(ovni);
-			colisor.novoSprite(ovni);
+			// colisor.novoSprite(ovni);
 		}
 
 		function mostrarLinkJogar() {
